<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/simple_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/join_the_community"
            android:textColor="#FFFFFF"
            android:background="@drawable/rounded_corners"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/create_an_account"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/complete_the_form_to_begin"
            android:textColor="#828282"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/firstNameInput"
                android:autofillHints=""
                android:hint="@string/first_name_hint"
                android:textColorHint="#6F6F6F"
                android:textColor="#FFFFFF"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:padding="20dp"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:maxLength="50"
                android:background="@drawable/form_border"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp" />

            <EditText
                android:id="@+id/lastNameInput"
                android:autofillHints=""
                android:hint="@string/last_name_hint"
                android:textColorHint="#6F6F6F"
                android:textColor="#FFFFFF"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:padding="20dp"
                android:textSize="16sp"
                android:inputType="textPersonName"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                android:maxLength="50"
                android:background="@drawable/form_border"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_height="60dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/schoolEmailInput"
                android:autofillHints=""
                android:hint="@string/school_email"
                android:inputType="textEmailAddress"
                android:textColorHint="#6F6F6F"
                android:textColor="#FFFFFF"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:padding="20dp"
                android:textSize="16sp"
                android:maxLength="254"
                android:background="@drawable/form_border"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <EditText
                android:id="@+id/passwordInput"
                android:autofillHints=""
                android:hint="@string/password"
                android:textColorHint="#6F6F6F"
                android:textColor="#FFFFFF"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:padding="20dp"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:maxLength="128"
                android:background="@drawable/form_border"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="60dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <AutoCompleteTextView
                android:id="@+id/userTypeInput"
                android:hint="@string/user_type"
                android:textColorHint="#6F6F6F"
                android:textColor="#FFFFFF"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:padding="20dp"
                android:textSize="16sp"
                android:maxLength="50"
                android:background="@drawable/form_border"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:focusable="true"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/dropdown_icon" />

            <AutoCompleteTextView
                android:id="@+id/departmentInput"
                android:hint="@string/department"
                android:textColorHint="#6F6F6F"
                android:textColor="#FFFFFF"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:padding="20dp"
                android:textSize="16sp"
                android:maxLength="50"
                android:background="@drawable/form_border"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_height="60dp"
                android:focusable="true"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/dropdown_icon"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/schoolNumberInput"
                android:autofillHints=""
                android:hint="@string/school_number"
                android:textColorHint="#6F6F6F"
                android:textColor="#FFFFFF"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:padding="20dp"
                android:textSize="16sp"
                android:inputType="number"
                android:digits="0123456789-"
                android:maxLength="50"
                android:background="@drawable/form_border"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <AutoCompleteTextView
                android:id="@+id/yearLevelInput"
                android:hint="@string/year_level"
                android:textColorHint="#6F6F6F"
                android:textColor="#FFFFFF"
                android:maxLines="1"
                android:singleLine="true"
                android:ellipsize="end"
                android:padding="20dp"
                android:textSize="16sp"
                android:maxLength="50"
                android:background="@drawable/form_border"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="60dp"
                android:focusable="true"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/dropdown_icon"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical" 
            android:gravity="center" 
            android:layout_marginStart="10dp" 
            android:layout_marginEnd="10dp" 
            android:layout_marginBottom="10dp"  
            android:layout_marginTop="0dp" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:background="@drawable/create_account_button"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/hasAccountButton"
        android:text="@string/already_have_an_account_sign_in"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>